Alteração dos parametros do Swagger
